# gl-wrapper

./: .gitignore  Cargo.toml  README.md
examples/: simple-interlaced-vbo.rs  simple.rs
src/: api.rs  lib.rs  main.rs
src/render/: mod.rs  program.rs  shader.rs  texture.rs
src/util/: aggregator_obj.rs  buffer_obj.rs  mod.rs
