[package]
name = "gl-wrapper"
version = "0.1.0"
authors = ["Error1000 <udreadanmihai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gl = "0.14"
glutin = "0.23"

[build-dependencies]
gl_generator = "0.14"

# Optimisation for release mode ( can apply to building library or binaries ( examples, .. ) )
[profile.release]
opt-level=3
lto=true



# Example binaries
[dev-dependencies]
image = "0.23"

[[example]]
name = "simple"




