[package]
name = "gl-wrapper"
version = "0.1.0"
authors = ["Error1000 <udreadanmihai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gl = "*"
glutin = "*"

[build-dependencies]
gl_generator = "*"

# Optimisation for release mode ( can apply to building library or binaries ( examples, .. ) )
[profile.release]
opt-level=3
lto=true



# Example binaries
[dev-dependencies]
image = "*"



